tests/generics/underspecified_generic_struct.sld
func main() {
    let l = new List();
    l.add(5);
    l.add(9);
}